[BUGFIX] Suggest wizard is behind form inputs
Fixes: #42092
Releases: 4.5, 4.6, 4.7, 6.0, 6.1
Reviewed-on: https://review.typo3.org/15767
Tested-by: Xavier Perseguers
Reviewed-on: https://review.typo3.org/17319

--- a/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/element_tceforms.css
@@ -332,7 +332,7 @@ div.typo3-TCEforms-suggest-indicator {
 div.typo3-TCEforms-suggest-choices {
 	position: absolute;
 	width: 250px;
-	z-index: 1;
+	z-index: 4000;
 }
 
 div.typo3-TCEforms-suggest-choices ul {
